# ex2

./: .gitignore  README.md  details.txt
src/: BMP.cpp  BMP.h  CMakeLists.txt  CMatrix.cpp  CMatrix.h  Matrix.cpp  MatrixException.cpp  MatrixException.h  bmp_tester.cpp  file_reading.cpp  file_reading.h  file_readingException.cpp  file_readingException.h
src/matrix/: CMatrix.cpp  CMatrix.h
